--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       const allow = document.getElementById("allow")
       const not = document.getElementById("not")
       const video = document.getElementById("video")
-      allow.addEventListener("mouseover", () => {
+      allow.addEventListener("click", () => {
          setTimeout(() => {
             setTimeout(() => {
                window.location.href = "./main.html";
@@ -53,7 +53,7 @@
          video.volume = 1
          video.play()
       })
-      not.addEventListener("mouseover", () => {
+      not.addEventListener("click", () => {
          setTimeout(() => {
             setTimeout(() => {
                window.location.href = "./main.html";
